<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/etNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/marginEt"
        android:hint="@string/etNombre"
        android:imeOptions="actionDone"
        android:inputType="textPersonName"/>

    <EditText
        android:id="@+id/etDescripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/etDescripcion"
        android:imeOptions="actionDone"
        android:inputType="textPersonName"/>

    <Button
        android:id="@+id/bttnAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/bttnMrgin"
        android:text="@string/bttnAdd"
        android:gravity="center_horizontal"/>

</LinearLayout>